--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "astro": "^0.19.0"
     },
     "dependencies": {
+        "lodash-es": "^4.17.21",
         "modern-normalize": "^1.1.0",
         "nanostores": "^0.4.3",
         "rolly.js": "^0.4.0",
