--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
         "build": "astro build"
     },
     "devDependencies": {
-        "@astrojs/renderer-vue": "^0.1.6",
-        "astro": "^0.19.0"
+        "@astrojs/renderer-vue": "^0.1.8",
+        "astro": "^0.19.4"
     },
     "dependencies": {
-        "lodash-es": "^4.17.21",
-        "modern-normalize": "^1.1.0",
-        "nanostores": "^0.4.3",
-        "rolly.js": "^0.4.0",
-        "smooth-scrollbar": "^8.6.2"
+        "locomotive-scroll": "^4.1.2",
+        "lodash": "^4.17.21",
+        "modern-normalize": "^1.1.0"
     }
 }
