--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "devDependencies": {
         "@astrojs/renderer-vue": "^0.3.0",
         "astro": "^0.22.1"
+    },
+    "dependencies": {
+        "modern-normalize": "^1.1.0"
     }
 }
