--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "private": true,
     "scripts": {
-        "start": "node ./server.js",
-        "build": "vite build && vite build --ssr && vite-plugin-ssr prerender",
-        "preview": "cross-env NODE_ENV=production node ./server.js"
+        "start": "ts-node ./server",
+        "build": "vue-tsc --noEmit && vite build && vite build --ssr && vite-plugin-ssr prerender",
+        "preview": "cross-env NODE_ENV=production ts-node ./server"
     },
     "dependencies": {
+        "@types/express": "^4.17.13",
+        "@types/node": "^17.0.31",
         "@vitejs/plugin-vue": "^2.2.2",
         "@vue/compiler-sfc": "^3.2.31",
         "@vue/server-renderer": "^3.2.31",
@@ -13,8 +15,11 @@
         "express": "^4.17.3",
         "modern-normalize": "^1.1.0",
         "sass": "^1.51.0",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.4",
         "vite": "^2.8.4",
         "vite-plugin-ssr": "^0.3.64",
-        "vue": "^3.2.31"
+        "vue": "^3.2.31",
+        "vue-tsc": "^0.34.11"
     }
 }
