--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     },
     "dependencies": {
         "@types/express": "^4.17.13",
+        "@types/lodash": "^4.14.182",
         "@types/node": "^17.0.31",
         "@vitejs/plugin-vue": "^2.2.2",
         "@vue/compiler-sfc": "^3.2.31",
         "@vue/server-renderer": "^3.2.31",
         "cross-env": "^7.0.3",
         "express": "^4.17.3",
+        "lodash": "^4.17.21",
         "modern-normalize": "^1.1.0",
         "sass": "^1.51.0",
         "ts-node": "^10.7.0",
