Enforce safe array access

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "esModuleInterop": true,
+        "noUncheckedIndexedAccess": true,
         "jsx": "preserve"
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
