--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cross-env": "^7.0.3",
         "express": "^4.17.3",
         "lodash": "^4.17.21",
+        "medium-zoom": "^1.0.6",
         "modern-normalize": "^1.1.0",
         "sass": "^1.51.0",
         "ts-node": "^10.7.0",
