--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "start": "ts-node ./server",
-        "build": "vue-tsc --noEmit && vite build && vite build --ssr && vite-plugin-ssr prerender",
-        "preview": "npm run build && cross-env NODE_ENV=production ts-node ./server"
+        "start": "vite",
+        "build": "vue-tsc --noEmit && vite-ssg build",
+        "preview": "vite preview"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": true,
+        "trailingComma": "all",
+        "singleAttributePerLine": true
     },
     "dependencies": {
-        "@types/express": "^4.17.13",
-        "@types/lodash": "^4.14.182",
-        "@types/node": "^17.0.31",
-        "@vitejs/plugin-vue": "^2.2.2",
-        "@vue/compiler-sfc": "^3.2.31",
-        "@vue/server-renderer": "^3.2.31",
-        "cross-env": "^7.0.3",
-        "express": "^4.17.3",
         "lodash": "^4.17.21",
         "medium-zoom": "^1.0.6",
         "modern-normalize": "^1.1.0",
-        "sass": "^1.51.0",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.4",
-        "vite": "^2.8.4",
-        "vite-plugin-ssr": "^0.3.64",
-        "vue": "^3.2.31",
-        "vue-tsc": "^0.34.11"
+        "vue": "^3.2.31"
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.14.182",
+        "@vitejs/plugin-vue": "^2.3.3",
+        "@vueuse/head": "^0.7.6",
+        "prettier": "^2.7.1",
+        "sass": "^1.53.0",
+        "typescript": "^4.7.4",
+        "vite": "^2.9.14",
+        "vite-ssg": "^0.20.2",
+        "vue-tsc": "^0.34.17"
     }
 }
